--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="" lang="en">WebStudio</a>
+      <a href="">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Студия</a></li>
@@ -72,7 +72,7 @@
           <li>
             <img
               src="./images/img-1.jpg"
-              alt="man is programmimg"
+              alt="мужчина программирует"
               width="370"
               height="294"
             />
@@ -80,7 +80,7 @@
           <li>
             <img
               src="./images/img-2.jpg"
-              alt="phone in female hands"
+              alt="телефон в женских руках"
               width="370"
               height="294"
             />
@@ -88,7 +88,7 @@
           <li>
             <img
               src="./images/img-3.jpg"
-              alt="color spectrum on the tablet"
+              alt="цветовой спектр на планшете"
               width="370"
               height="294"
             />
@@ -101,7 +101,7 @@
           <li>
             <img
               src="./images/img-4.jpg"
-              alt="bearded brown-haired man in a brown shirt wearing glasses"
+              alt="бородатый шатен в коричневой рубашке в очках"
               width="270"
               height="260"
             />
@@ -111,7 +111,7 @@
           <li>
             <img
               src="./images/img-5.jpg"
-              alt="blonde with freckles in a black jacket wearing glasses"
+              alt="блондинка с веснушками в черном пиджаке в очках"
               width="270"
               height="260"
             />
@@ -121,7 +121,7 @@
           <li>
             <img
               src="./images/img-6.jpg"
-              alt="bearded red-haired man in a blue shirt"
+              alt="бородатый рыжий мужчина в синей рубашке"
               width="270"
               height="260"
             />
@@ -131,7 +131,7 @@
           <li>
             <img
               src="./images/img-7.jpg"
-              alt="bearded brown-haired man in a black T-shirt wearing glasses"
+              alt="бородатый шатен в черной футболке в очках"
               width="270"
               height="260"
             />
@@ -142,19 +142,21 @@
       </section>
     </main>
     <footer>
-      <a href="" lang="en">WebStudio</a>
-      <ul>
-        <li>
-          <a
-            href="https://goo.gl/maps/TNpUosQZodaYW8YJA"
-            target="_blank"
-            rel="noopener noindex nofollow"
-            >г. Киев, пр-т Леси Украинки, 26</a
-          >
-        </li>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      <a href="">WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/TNpUosQZodaYW8YJA"
+              target="_blank"
+              rel="noopener noindex nofollow"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
