--- a/index.html
+++ b/index.html
@@ -35,33 +35,29 @@
           <li>
             <h3>Внимание к деталям</h3>
             <p>
-              Идейные соображения, а также <br />
-              начало повседневной работы по <br />
+              Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
             <p>
-              Задача организации, в особенности <br />
-              же рамки и место обучения кадров <br />
+              Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3>Планирование</h3>
             <p>
-              Равным образом консультация с <br />
-              широким активом в значительной <br />
+              Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
             <p>
-              Значимость этих проблем настолько <br />
-              очевидна, что реализация плановых <br />
-              заданий.
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
             </p>
           </li>
         </ul>
