--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               width="270"
               height="260"
             />
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
@@ -111,7 +111,7 @@
               width="270"
               height="260"
             />
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
@@ -121,7 +121,7 @@
               width="270"
               height="260"
             />
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -131,7 +131,7 @@
               width="270"
               height="260"
             />
-            <p>Михаил Ермаков</p>
+            <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
